[tool.poetry]
name = "rocrate-validator"
version = "0.1.0"
description = ""
authors = ["Marco Enrico Piras <kikkomep@crs4.it>"]
readme = "README.md"
packages = [{ include = "rocrate_validator", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
rdflib = "^7.0.0"
pyshacl = "^0.25.0"
click = "^8.1.7"
rich = "^13.7.1"
toml = "^0.10.2"
rich-click = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.1.0"
pytest = "^8.1.0"
pytest-cov = "^4.1.0"
pylint = "^3.1.0"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rocrate-validator = "rocrate_validator.cli:cli"

[tool.rocrate_validator]
skip_dirs = [".git", ".github", ".vscode"]
